force-app/main/default/objects/Training_Detail__c/Training_Detail__c.object-meta.xml
<CustomObject>
    <label>Training Detail</label>
    <nameField>
        <label>Training Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>