force-app/main/default/objects/Training_Detail__c/fields/Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Check_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Result</label>
    <referenceTo>CheckResult__c</referenceTo>
    <relationshipLabel>Training Details</relationshipLabel>
    <relationshipName>Training_Details</relationshipName>
    <type>Lookup</type>
</CustomField>