force-app/main/default/objects/Training_Detail__c/fields/InspectorDailyReport__c.field-meta.xml
<CustomField>
    <fullName>InspectorDailyReport__c</fullName>
    <formula>Check_Result__r.InspectorDailyReport__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InspectorDailyReport</label>
    <type>Text</type>
</CustomField>