force-app/main/default/objects/Training_Detail__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <formula>TEXT(Check_Result__r.CheckItem__r.Item_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Type</label>
    <type>Text</type>
</CustomField>