force-app/main/default/objects/Training_Detail__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <formula>Check_Result__r.InspectorDailyReport__r.Report_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReportDate</label>
    <type>Date</type>
</CustomField>