force-app/main/default/objects/Training_Detail__c/fields/Store_Level__c.field-meta.xml
<CustomField>
    <fullName>Store_Level__c</fullName>
    <formula>TEXT(Check_Result__r.InspectorDailyReport__r.Store__r.Shop_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Level</label>
    <type>Text</type>
</CustomField>