force-app/main/default/objects/Training_Detail__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <formula>Check_Result__r.InspectorDailyReport__r.Store__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Name</label>
    <type>Text</type>
</CustomField>